# sound-synthesizer

./: CLAUDE.md  Cargo.toml  PLAN.md  README.md
.claude/: settings.json
.claude/memories/: MEMORY.md  feedback_ai_music_theory.md  feedback_commit_messages.md
.claude/plans/: 2026-05-02-filter-and-filter-envelope.md
patterns/: and_the_government_too.pat  clocks_coldplay.pat  cm_chords.pat  cm_expressive.pat  cm_groove.pat  cm_riff.pat  cm_song.pat  four_on_the_floor.pat  harmony_stack_demo.pat  test_adsr.pat  test_filter.pat  test_gain.pat  test_gate.pat  test_kick_hihat.pat  test_kick_only.pat  test_pluck.pat  test_swing.pat  test_tempo_change.pat  test_velocity.pat  time_inception.pat
src/: audio.rs  envelope.rs  filter.rs  keyboard.rs  main.rs  notes.rs  pattern.rs  pluck.rs  render.rs  reverb.rs  sequencer.rs  visualizer.rs
